ingress/test/nginx.yml

apiVersion: v1
kind: Pod

metadata:
  name: pod
  namespace: web
  labels:
    role: webapp
    
spec:
  containers:
    - name: web
      image: nginx:1.27
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          protocol: TCP
      volumeMounts:
        - name: webmount
          mountPath: /usr/share/nginx/html
          readOnly: true
      
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 60
        periodSeconds: 10
        timeoutSeconds: 5
        successThreshold: 2
        failureThreshold: 3

      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 60
        periodSeconds: 10
        timeoutSeconds: 5
        successThreshold: 1
        failureThreshold: 3

  volumes:
    - name: webmount
      configMap:
        name: ihtml
